// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render a div 1`] = `
<div
  className="Alert-jnx1ih-0 dumxOA"
>
  Hello
</div>
`;

exports[`Alert should render with ui: success 1`] = `
<div
  className="Alert-jnx1ih-0 bOuUyQ"
>
  Hello
</div>
`;
